--- a/style.css
+++ b/style.css
@@ -9,63 +9,8 @@ header {
   position: sticky;
   top: 0;
   z-index: 30;
-  background: #00001e;
   padding: 15px 0;
-  color: white;
+  color: #dde3c5;
   box-shadow: 0 2px 4px rgba(0,0,0,0.3);
 }
 
-
-#home {
-  position: relative;
-  height: 500px; /* full viewport height */
-  background-image: url("data/home dark.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  justify-content: center; /* vertical centering */
-  align-items: center;     /* horizontal centering */
-  text-align: center;
-  color: white;
-  font-size: larger;
-}
-
-#home h2{
-  font-size: 38px;
-}
-#home h3{
-  padding: 20px;
-}
-
-#home p{
-text-align: center;
-width: 800px;
-padding: 20px;
-
-}
-
-#projects{
-  position: relative;
-  color: rgb(0, 0, 0);
-  font-size: larger;
-}
-#projects h2{
-    padding: 30px;
-}
-
-#contact {
-    background-color: #1f1f47;
-    color:#ffffff;
-
-}
-
-#about {
-background-color: #1f1f47;
-color: white;
-
-}
-
-footer{
-  background-color: #00001e;
-}
